--- a/frontend/components/side_panels/UserMenu/_styles.scss
+++ b/frontend/components/side_panels/UserMenu/_styles.scss
@@ -19,6 +19,7 @@
     &--active {
       background-color: $core-black;
       border-right: 3px solid $core-blue;
+      font-weight: $bold;
     }
 
     a {
